refactor: use constructor-based injection to inject required dependencies
- Declare dependencies as final and use Lombok's RequiredArgsConstructor annotation to inject them into the constructor

Closes: #3