@@ -1,12 +1,10 @@
 package one.digitalinnovation.personapi.services;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
-import lombok.AllArgsConstructor;
 import one.digitalinnovation.personapi.dtos.mapper.PersonMapper;
 import one.digitalinnovation.personapi.dtos.request.PersonDTO;
 import one.digitalinnovation.personapi.dtos.response.MessageResponseDTO;
@@ -15,15 +13,13 @@ import one.digitalinnovation.personapi.exceptions.PersonNotFoundException;
 import one.digitalinnovation.personapi.repositories.PersonRepository;
 
 @Service
-@AllArgsConstructor(onConstructor = @__(@Autowired))
+@RequiredArgsConstructor
 public class PersonService {
 
-	private PersonRepository personRepository;
-
-	private final PersonMapper personMapper = PersonMapper.INSTANCE;
+	private final PersonRepository personRepository;
 
 	public MessageResponseDTO create(PersonDTO personDTO) {
-		var personToSave = personMapper.toModel(personDTO);
+		var personToSave = PersonMapper.INSTANCE.toModel(personDTO);
 		var savedPerson = personRepository.save(personToSave);
 
 		return createMessageResponse(savedPerson.getId(), "Created person with ID ");
@@ -32,19 +28,19 @@ public class PersonService {
 	public PersonDTO findById(Long id) throws PersonNotFoundException {
 		var person = verifyIfExists(id);
 
-		return personMapper.toDTO(person);
+		return PersonMapper.INSTANCE.toDTO(person);
 	}
 
 	public List<PersonDTO> listAll() {
 		var allPeople = personRepository.findAll();
 
-		return allPeople.stream().map(personMapper::toDTO).collect(Collectors.toList());
+		return allPeople.stream().map(PersonMapper.INSTANCE::toDTO).toList();
 	}
 
 	public MessageResponseDTO update(Long id, PersonDTO personDTO) throws PersonNotFoundException {
 		verifyIfExists(id);
 
-		var personToUpdate = personMapper.toModel(personDTO);
+		var personToUpdate = PersonMapper.INSTANCE.toModel(personDTO);
 		var updatedPerson = personRepository.save(personToUpdate);
 
 		return createMessageResponse(updatedPerson.getId(), "Updated person with ID ");
